# StreamArchiver

./: .gitignore  Cargo.toml  README.md  build.rs  clippy.toml
.github/workflows/: rust.yml
doc/: crates.js  help.html  settings.html  src-files.js
doc/search.index/: 0058b4e0c8.js  007d353914.js  00b2d33f7d.js  00c0d8a152.js  01603c20f4.js  01b5f86be9.js  01e4b57894.js  02c8f08876.js  0303ed14bb.js  03b36e050d.js  040c4f6723.js  042d10640d.js  04430590ab.js  0490afe08a.js  04b08b103a.js  052f1febb2.js  054eae8348.js  056cf36725.js  05b3c9c68f.js  05c8e05d5d.js  067baa4f7e.js  067f541de1.js  06fd7a2099.js  07191562ec.js  07756ba576.js  079033987e.js  07ca455e61.js  080a4914fd.js  0822ad52f0.js  08d26f0b2e.js  08e6990c13.js  094aaee5c0.js  096c4b7101.js  09a797d4f9.js  09e794af6a.js  0ab761f902.js  0ac574e38b.js  0af4834fb1.js  0b5a0cb765.js  0bdafa0092.js  (+276 more)
doc/search.index/crateNames/: f94a6883ff.js
doc/search.index/desc/: 84600fed21.js  c610a47f07.js
doc/search.index/entry/: 2fc1d97c99.js  7b5ce5bf8d.js  8e94f29e7f.js  cbf5421c41.js
doc/search.index/function/: 33f18d8973.js  e0f76dd5bf.js
doc/search.index/generic_inverted_index/: 7aea68fc44.js
doc/search.index/name/: 68a5834836.js
doc/search.index/normalizedName/: 6e16d14b8d.js
doc/search.index/path/: 13dc3c7e14.js
doc/search.index/type/: b4521c93b1.js
doc/src/streamarchiver/: app_core.rs.html  app_paths.rs.html  assets.rs.html  browser_ua.rs.html  chat.rs.html  compat.rs.html  detectors.rs.html  downloader.rs.html  emoji.rs.html  emote_anim.rs.html  events.rs.html  eventsub.rs.html  fonts.rs.html  google_oauth.rs.html  hls_preview.rs.html  imports.rs.html  main.rs.html  models.rs.html  notifications.rs.html  oauth.rs.html  platform.rs.html  schedule_ocr.rs.html  schedule_source.rs.html  scheduler.rs.html  store.rs.html  ui.rs.html  version.rs.html  watchdog.rs.html  websub.rs.html
doc/streamarchiver/: all.html  fn.build_tray.html  fn.init_tracing.html  fn.main.html  fn.prune_old_logs.html  fn.run_add.html  fn.run_capture_test.html  fn.run_headless.html  fn.run_list.html  fn.run_manual_test.html  fn.run_probe.html  fn.run_recordings.html  fn.run_twitch_login.html  index.html  sidebar-items.js
doc/streamarchiver/app_core/: constant.SHUTDOWN_DRAIN_TIMEOUT.html  fn.sleep_cancellable.html  index.html  sidebar-items.js  struct.AppCore.html  struct.ProcInfo.html
doc/streamarchiver/app_paths/: fn.asset_cache_dir.html  fn.data_dir.html  fn.db_path.html  fn.default_output_dir.html  fn.logs_dir.html  fn.platform_assets_dir.html  index.html  sidebar-items.js
doc/streamarchiver/assets/: fn.append_asset_changes.html  fn.archive_and_write.html  fn.asset_present.html  fn.assets_ever_fetched.html  fn.channel_asset_dir.html  fn.current_asset.html  fn.diff_emote_manifest.html  fn.download_badge_set.html  fn.download_image.html  fn.download_image_archival.html  fn.ensure_scaled_icon.html  fn.ext_from_url.html  fn.fetch_7tv_emotes.html  fn.fetch_bttv_emotes.html  fn.fetch_ffz_emotes.html  fn.fetch_helix_badges.html  fn.fetch_kick_channel_assets.html  fn.fetch_stream_thumbnail.html  fn.fetch_twitch_badges.html  fn.fetch_twitch_channel_assets.html  fn.fetch_twitch_emotes.html  fn.fetch_twitch_name_color.html  fn.fetch_youtube_channel_assets.html  fn.fetch_youtube_page_banner.html  fn.find_asset.html  fn.normalize_yt_banner_url.html  fn.read_asset_changes.html  fn.record_manifest_change.html  fn.run_kick_assets.html  fn.run_twitch_assets.html  fn.run_youtube_assets.html  fn.sanitize_emote_name.html  fn.should_refetch_assets.html  fn.should_refetch_global_badges.html  fn.write_fetched_stamp.html  fn.write_global_badges_stamp.html  fn.youtube_banner_from_page_data.html  index.html  sidebar-items.js  struct.AssetChange.html  (+7 more)
doc/streamarchiver/browser_ua/: constant.FALLBACK_CHROME_VERSION.html  constant.FALLBACK_FIREFOX_VERSION.html  fn.build_browser_fingerprint.html  fn.detect_browser_version.html  index.html  sidebar-items.js  struct.BrowserFingerprint.html
doc/streamarchiver/chat/: constant.CONNECT_TIMEOUT.html  constant.WS_URL.html  fn.log_twitch_chat.html  fn.parse_privmsg.html  fn.session.html  fn.wait_stopped.html  index.html  sidebar-items.js  static.NICK_SEQ.html  struct.ChatLine.html
doc/streamarchiver/compat/: fn.reattach_fixups.html  fn.split_build.html  index.html  sidebar-items.js
doc/streamarchiver/detectors/: constant.CREATE_NO_WINDOW.html  constant.TITLE_FILL_WINDOW_SECS.html  fn.clamp_window.html  fn.collect_upcoming.html  fn.collect_upcoming_fallback.html  fn.community_images.html  fn.extract_json_after.html  fn.extract_lockup_schedule.html  fn.extract_lockup_viewmodel.html  fn.extract_yt_video_id_from_thumbnail.html  fn.fallback_seg.html  fn.fill_titles.html  fn.first_twimg_media.html  fn.fnv64.html  fn.has_blank_title.html  fn.is_url.html  fn.kick_slug.html  (+38 more)
scripts/: Show-Processes.ps1  decode-schedule-img.ps1
src/: app_core.rs  app_paths.rs  assets.rs  browser_ua.rs  chapters.rs  chat.rs  compat.rs  detectors.rs  disposal.rs  downloader.rs  emoji.rs  emote_anim.rs  events.rs  eventsub.rs  fonts.rs  google_oauth.rs  grid_columns.rs  head_backfill.rs  hls_preview.rs  hype.rs  imports.rs  inspector.rs  io_gate.rs  iomon.rs  logfmt.rs  main.rs  models.rs  notifications.rs  oauth.rs  platform.rs  platform_pref.rs  pot_server.rs  recovery.rs  schedule_ocr.rs  schedule_source.rs  scheduled_recordings.rs  scheduler.rs  store.rs  toast_activation.rs  triggers.rs  (+5 more)
src/downloader/: ad_probe.rs  alerts.rs  backfill.rs  cache.rs  chapters.rs  finalize.rs  gap_recover.rs  gap_splice.rs  lock_culprit.rs  naming.rs  plan.rs  process.rs  remux.rs  state_guard.rs  supervisor.rs  tools.rs  vod.rs
src/store/: alerts.rs  collab.rs  migrations.rs  monitors.rs  posts.rs  recordings.rs  scheduled.rs  stats_history.rs  videos.rs  vod.rs
src/ui/: app.rs  assets_helpers.rs  background.rs  calendar.rs  channel_stats.rs  chat.rs  debug.rs  dialogs.rs  files.rs  format.rs  grid.rs  help.rs  io_view.rs  issues.rs  player.rs  posts.rs  pot_log.rs  properties.rs  schedule.rs  settings.rs  streams.rs  videos.rs
(+782 files in other folders)
