[package]
name = "streamarchiver"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
auto-launch = "0.6.0"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
directories = "6.0.0"
eframe = { version = "0.34.3", default-features = false, features = ["glow", "default_fonts", "wayland", "x11", "persistence"] }
egui_extras = { version = "0.34.3", features = ["serde"] }
futures-util = { version = "0.3.32", default-features = false, features = ["std", "sink"] }
notify-rust = "4.18.0"
parking_lot = "0.12"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "gzip", "charset", "http2", "query", "form"] }
rfd = "0.17.2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha1 = "0.10"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "sync", "process", "io-util", "fs", "signal"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7.18", features = ["time", "codec"] }
tracing = "0.1.44"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tray-icon = "0.24.1"
windows = { version = "0.62", features = ["Win32_System_JobObjects", "Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Diagnostics_Debug", "Win32_System_Kernel", "Win32_Storage_FileSystem", "Win32_System_Com", "UI_Notifications", "Data_Xml_Dom", "Win32_UI_Controls", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_DataExchange", "Win32_System_Memory"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "ico"] }
regex-lite = "0.1.9"
egui_commonmark = "0.23"

[build-dependencies]
embed-manifest = "1.4"
# Build-time only: decode the platform favicons (assets/platform/*.png) to raw
# RGBA embedded into the binary. Keeps the runtime dependency-free (no image
# crate shipped) so the binary stays lean.
image = { version = "0.25.8", default-features = false, features = ["png"] }
# Build-time only: rasterize the third-party emote-provider logos
# (assets/emote/*.svg) to raw RGBA. Like the favicons above, the SVG stack never
# ships in the binary. resvg re-exports usvg + tiny-skia, so this is the only dep.
resvg = { version = "0.45", default-features = false }

# Debug builds: optimize dependencies (egui/image are 5-20x slower fully
# unoptimized — enough to judder scrolling and window drags on their own)
# while keeping our own crate at opt-level 1 for fast incremental compiles.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
# Speed over size: "z" (size) visibly slows egui's per-frame layout and
# tessellation; the binary grows some, but the UI is what we ship.
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
